Added new C2 endpoint "ProtectMessage"
This allows to protect a given payload with a topic key via an api call
Added c2cli command to call it.
