# internal/api/grpc.go
@@ -516,6 +516,22 @@ func (s *grpcServer) NewC2Key(ctx context.Context, req *pb.NewC2KeyRequest) (*pb
 	return &pb.NewC2KeyResponse{}, nil
 }
 
+func (s *grpcServer) ProtectMessage(ctx context.Context, req *pb.ProtectMessageRequest) (*pb.ProtectMessageResponse, error) {
+	if len(req.BinaryData) == 0 {
+		return nil, errors.New("binary data cannot be empty")
+	}
+
+	protected, err := s.e4Service.ProtectMessage(ctx, req.Topic, req.BinaryData)
+	if err != nil {
+		return nil, grpcError(err)
+	}
+
+	return &pb.ProtectMessageResponse{
+		Topic:               req.Topic,
+		ProtectedBinaryData: protected,
+	}, nil
+}
+
 func (s *grpcServer) SubscribeToEventStream(req *pb.SubscribeToEventStreamRequest, srv pb.C2_SubscribeToEventStreamServer) error {
 	listener := events.NewListener(s.eventDispatcher)
 	defer listener.Close()
